Update authentication to Bearer token instead of use the token in cookies